# rulespec-compile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: authoring-rulespec.md  compile-and-lower.md  compiler-architecture.md  decision-seam-a.md  validation-and-oracles.md
examples/: ctc.yaml  eitc.yaml  simple_tax.yaml  snap.yaml
examples/statute/26/32/b/2/A/: base_amounts.yaml
examples/working_families/: README.md  base_amount.yaml  benefit_amount.yaml  phase_in_cap.yaml  phase_in_rate.yaml
src/rulespec_compile/: __init__.py  batch_executor.py  cli.py  compile_model.py  expression_ir.py  harness.py  js_generator.py  module_resolution.py  parameter_bindings.py  parser.py  program.py  python_generator.py  rule_bindings.py  rust_generator.py
src/rulespec_compile/calculators/: __init__.py  ctc.py  eitc.py  snap.py
src/rulespec_compile/validation/: __init__.py  cli.py  comparator.py  cps_loader.py  runners.py
tests/: test_batch_executor.py  test_cli.py  test_cli_coverage.py  test_compile_model.py  test_coverage_gaps.py  test_harness.py  test_js_generator.py  test_module_resolution.py  test_parameter_bindings.py  test_parser.py  test_program.py  test_python_generator.py  test_rule_bindings.py  test_rust_generator.py  test_validation_external.py  test_validation_js.py  test_validation_modules.py
